--- a/package.json
+++ b/package.json
@@ -36,13 +36,22 @@
     "test:unit": "cross-env NODE_ENV=test nyc run-s test:unit:base",
     "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
-    "lint:peer": "npm ls >/dev/null"
+    "lint:peer": "npm ls >/dev/null",
+    "lint:gherkin": "gherkin-lint",
+    "test:integration": "run-s 'test:integration:base -- --profile noWip'",
+    "test:integration:base": "NODE_OPTIONS=--enable-source-maps DEBUG=any cucumber-js test/integration --profile base",
+    "test:integration:debug": "DEBUG=test run-s test:integration",
+    "test:integration:wip": "run-s 'test:integration:base -- --profile wip'",
+    "test:integration:wip:debug": "DEBUG=test run-s 'test:integration:wip'",
+    "test:integration:focus": "run-s 'test:integration:base -- --profile focus'"
   },
   "devDependencies": {
     "@babel/register": "7.12.1",
+    "@cucumber/cucumber": "7.0.0-rc.0",
     "@form8ion/babel-preset": "1.6.35",
     "@form8ion/commitlint-config": "1.0.14",
     "@form8ion/eslint-config": "1.6.35",
+    "@form8ion/eslint-config-cucumber": "1.4.0",
     "@form8ion/eslint-config-mocha": "1.2.9",
     "@form8ion/remark-lint-preset": "1.0.11",
     "@istanbuljs/nyc-config-babel": "3.0.0",
@@ -53,6 +62,7 @@
     "codecov": "3.8.0",
     "cross-env": "7.0.2",
     "cz-conventional-changelog": "3.3.0",
+    "gherkin-lint": "4.1.3",
     "husky": "4.3.0",
     "lockfile-lint": "4.3.7",
     "mocha": "8.2.1",
