--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
     "lint:peer": "npm ls >/dev/null",
     "lint:gherkin": "gherkin-lint",
+    "pretest:integration": "preview",
     "test:integration": "run-s 'test:integration:base -- --profile noWip'",
     "test:integration:base": "NODE_OPTIONS=--enable-source-maps DEBUG=any cucumber-js test/integration --profile base",
     "test:integration:debug": "DEBUG=test run-s test:integration",
@@ -66,8 +67,10 @@
     "husky": "4.3.0",
     "lockfile-lint": "4.3.7",
     "mocha": "8.2.1",
+    "mock-fs": "4.13.0",
     "npm-run-all": "4.1.5",
     "nyc": "15.1.0",
+    "package-preview": "3.0.0",
     "remark-cli": "9.0.0",
     "remark-toc": "7.0.0",
     "remark-usage": "9.0.0",
