--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,3 +3,9 @@ extends:
   - '@form8ion'
   - '@form8ion/mocha'
   - '@form8ion/cucumber'
+
+overrides:
+ - files: example.js
+   rules:
+     import/no-extraneous-dependencies: off
+
