--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@cucumber/cucumber": "7.0.0-rc.0",
     "@form8ion/babel-preset": "1.6.35",
     "@form8ion/commitlint-config": "1.0.14",
+    "@form8ion/core": "1.0.0",
     "@form8ion/eslint-config": "1.6.35",
     "@form8ion/eslint-config-cucumber": "1.4.0",
     "@form8ion/eslint-config-mocha": "1.2.9",
@@ -65,6 +66,7 @@
     "cz-conventional-changelog": "3.3.0",
     "gherkin-lint": "4.1.3",
     "husky": "4.3.0",
+    "js-yaml": "3.14.0",
     "lockfile-lint": "4.3.7",
     "mocha": "8.2.1",
     "mock-fs": "4.13.0",
