--- a/package.json
+++ b/package.json
@@ -80,5 +80,9 @@
     "rollup": "2.33.1",
     "rollup-plugin-auto-external": "2.0.0",
     "sinon": "9.2.1"
+  },
+  "dependencies": {
+    "@form8ion/github-actions-node-ci": "^1.9.0",
+    "deepmerge": "^4.2.2"
   }
 }
