--- a/package.json
+++ b/package.json
@@ -79,10 +79,12 @@
     "rimraf": "3.0.2",
     "rollup": "2.33.1",
     "rollup-plugin-auto-external": "2.0.0",
-    "sinon": "9.2.1"
+    "sinon": "9.2.1",
+    "testdouble": "3.16.1"
   },
   "dependencies": {
     "@form8ion/github-actions-node-ci": "^1.9.0",
-    "deepmerge": "^4.2.2"
+    "deepmerge": "^4.2.2",
+    "execa": "^4.1.0"
   }
 }
