--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
   },
   "dependencies": {
     "@form8ion/github-actions-node-ci": "^1.9.0",
+    "@form8ion/javascript-core": "^2.6.0",
     "deepmerge": "^4.2.2",
     "execa": "^4.1.0"
   }
