--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "@form8ion/javascript-core": "^2.6.0",
     "@travi/cli-messages": "^1.0.4",
     "deepmerge": "^4.2.2",
-    "execa": "^4.1.0"
+    "execa": "^4.1.0",
+    "remark": "^13.0.0",
+    "remark-remove-travis-ci-badge": "1.0.0-alpha.1"
   }
 }
