ci(node-versions): temporarily build the branch

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -6,6 +6,7 @@ name: Node.js CI
       - alpha
       - beta
       - 'renovate/**'
+      - node-versions
   pull_request:
     types:
       - opened
