--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -31,6 +31,7 @@ jobs:
         run: 'npm run coverage:report'
   release:
     runs-on: ubuntu-latest
+    needs: verify
     steps:
       - uses: actions/checkout@v2
       - name: Read .nvmrc
