ci(package-preview): limited the installed pnpm version to v5
since v6 no longer works with v3 of package-preview and v4 of package-preview requires a node
version above v12

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -13,6 +13,7 @@ name: Node.js CI
 env:
   FORCE_COLOR: 1
   NPM_CONFIG_COLOR: always
+  PNPM_VERSION: latest-5
 jobs:
   verify:
     runs-on: ubuntu-latest
