test(coverage): switched from nyc to c8 and updated to the modern codecov uploader

--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "build:js": "rollup --config",
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
-    "test:unit": "cross-env NODE_ENV=test nyc run-s test:unit:base",
-    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
     "lint:peer": "npm ls >/dev/null",
     "lint:gherkin": "gherkin-lint",
@@ -61,12 +60,11 @@
     "@form8ion/eslint-config-cucumber": "1.4.1",
     "@form8ion/eslint-config-mocha": "1.2.16",
     "@form8ion/remark-lint-preset": "1.0.13",
-    "@istanbuljs/nyc-config-babel": "3.0.0",
     "@travi/any": "2.0.20",
     "babel-plugin-istanbul": "6.1.1",
     "ban-sensitive-files": "1.9.18",
+    "c8": "7.11.0",
     "chai": "4.3.6",
-    "codecov": "3.8.3",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "gherkin-lint": "4.2.2",
@@ -77,7 +75,6 @@
     "mocha": "9.2.2",
     "mock-fs": "5.1.2",
     "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
     "package-preview": "4.0.0",
     "remark-cli": "9.0.0",
     "remark-toc": "7.2.0",
