--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -22,12 +22,11 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version-file: '.nvmrc'
+          node-version-file: .nvmrc
           cache: npm
       - run: npm clean-install
       - run: npm test
-      - name: Upload coverage data to Codecov
-        run: npm run coverage:report
+      - uses: codecov/codecov-action@v2
   verify-matrix:
     runs-on: ubuntu-latest
     strategy:
@@ -44,8 +43,6 @@ jobs:
           cache: npm
       - run: npm clean-install
       - run: npm test
-      - name: Upload coverage data to Codecov
-        run: npm run coverage:report
   release:
     runs-on: ubuntu-latest
     needs:
