--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "utility to remove Travis-CI configuration and enable GitHub Actions",
   "license": "MIT",
   "engines": {
-    "node": ">=14.13.1"
+    "node": "^14.15 || >=16"
   },
   "version": "0.0.0-semantically-released",
   "files": [
