test(package-preview): removed package-preview since the exports map enables native self-referencing

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
     "lint:peer": "npm ls >/dev/null",
     "lint:gherkin": "gherkin-lint",
-    "pretest:integration": "preview",
+    "pretest:integration": "run-s build",
     "test:integration": "run-s 'test:integration:base -- --profile noWip'",
     "test:integration:base": "DEBUG=any cucumber-js test/integration --profile base",
     "test:integration:debug": "DEBUG=test run-s test:integration",
@@ -88,7 +88,6 @@
     "mocha": "10.0.0",
     "mock-fs": "5.1.4",
     "npm-run-all": "4.1.5",
-    "package-preview": "4.0.0",
     "remark-cli": "9.0.0",
     "remark-toc": "7.2.0",
     "remark-usage": "9.0.0",
