--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "lib/"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "dependencies": {
     "@form8ion/execa-wrapper": "^1.0.0",
