--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
     "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
-    "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
+    "test:unit:base": "DEBUG=any vitest run",
     "lint:peer": "npm ls >/dev/null",
     "lint:gherkin": "gherkin-lint",
     "pretest:integration": "run-s build",
@@ -72,7 +72,6 @@
     "@form8ion/core": "2.0.0",
     "@form8ion/eslint-config": "5.0.28",
     "@form8ion/eslint-config-cucumber": "1.4.1",
-    "@form8ion/eslint-config-mocha": "2.0.3",
     "@form8ion/remark-lint-preset": "1.0.13",
     "@travi/any": "2.1.8",
     "babel-plugin-istanbul": "6.1.1",
@@ -83,10 +82,10 @@
     "cz-conventional-changelog": "3.3.0",
     "gherkin-lint": "4.2.2",
     "husky": "8.0.3",
+    "jest-when": "3.5.2",
     "js-yaml": "4.1.0",
     "lockfile-lint": "4.10.1",
     "ls-engines": "0.9.0",
-    "mocha": "10.2.0",
     "mock-fs": "5.2.0",
     "npm-run-all": "4.1.5",
     "remark-cli": "9.0.0",
@@ -95,7 +94,7 @@
     "rimraf": "4.4.1",
     "rollup": "3.20.2",
     "rollup-plugin-auto-external": "2.0.0",
-    "sinon": "15.0.3",
-    "testdouble": "3.17.2"
+    "testdouble": "3.17.2",
+    "vitest": "0.29.8"
   }
 }
