--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "utility to remove Travis-CI configuration and enable GitHub Actions",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
+  "type": "module",
   "engines": {
     "node": "^16.13.0 || >=18"
   },
@@ -11,12 +12,8 @@
   "bugs": "https://github.com/form8ion/replace-travis-ci-with-github-actions/issues",
   "homepage": "https://npm.im/@form8ion/replace-travis-ci-with-github-actions",
   "runkitExampleFilename": "./example.js",
-  "exports": {
-    "require": "./lib/index.js",
-    "import": "./lib/index.mjs"
-  },
+  "exports": "./lib/index.js",
   "main": "./lib/index.js",
-  "module": "./lib/index.mjs",
   "sideEffects": false,
   "scripts": {
     "test": "npm-run-all --print-label build --parallel lint:* --parallel test:*",
