--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -33,7 +33,7 @@ jobs:
           - 16.14.0
           - 18.0.0
           - 18
-          - 19
+          - 20
     steps:
       - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
       - name: Setup node
@@ -47,6 +47,13 @@ jobs:
     needs:
       - verify
       - verify-matrix
+    permissions:
+      contents: write
+      id-token: write
+      issues: write
+      pull-requests: write
     uses: form8ion/.github/.github/workflows/release-package.yml@master
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+permissions:
+  contents: read
